--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "dependencies": {
+    "grunt-livereload": "^0.1.3",
+    "node-kit": "^0.8.0",
     "node-sass": "^1.2.3",
+    "tiny-lr": "^0.1.4",
     "uglify-js": "^2.4.15"
   }
 }
