--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "grunt-livereload": "^0.1.3",
+    "imageoptim-cli": "^1.11.4",
     "node-kit": "^0.8.0",
     "node-sass": "^1.2.3",
     "tiny-lr": "^0.1.4",
