--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "dependencies": {
-    "grunt-livereload": "^0.1.3",
-    "imageoptim-cli": "^1.11.4",
-    "node-sass": "^1.2.3",
-    "tiny-lr": "^0.1.4",
-    "uglify-js": "^2.4.15"
+    "grunt-livereload": "",
+    "imageoptim-cli": "",
+    "node-sass": "",
+    "tiny-lr": "",
+    "uglify-js": ""
   }
 }
